--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ layout: default
 
 <h2 class="page-heading">Projects</h2>
  
-  <a href="{{ site.url }}perspective/">A semi-analytical perspective ...</a>
+ <b><a href="{{ site.url }}perspective/">A semi-analytical perspective ...</a><\br>
   
-  <a href="{{ site.url }}mutidark/">The MultiDark-Galaxies</a>
+  <a href="{{ site.url }}multidark/">The MultiDark-Galaxies</a>
   
 <h2 class="page-heading">Find out more</h2>
 <font size="+1">
