--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
  
  <b><a href="{{ site.url }}perspective/">A semi-analytical perspective ...</a><\br>
   
-  <a href="{{ site.url }}multidark/">The MultiDark-Galaxies</a>
+  <a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a>
   
 <h2 class="page-heading">Find out more</h2>
 <font size="+1">
