--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ layout: default
 
 <h2 class="page-heading">Projects</h2>
  
- <b><a href="{{ site.url }}perspective/">A semi-analytical perspective ...</a><\br>
+ <b>
+   <a href="{{ site.url }}perspective/">A semi-analytical perspective ...</a>
+ </br>
   
   <a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a>
   
