--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="home">
 
-  Welcome to my reserach blog. This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.
+  Welcome to my reserach blog. This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.\\
   
   See some recent posts:
 
@@ -21,12 +21,14 @@ layout: default
  <br>
 
 
-<h2 class="page-heading">Projects</h2>
+### Projects
  
  <b><a href="{{ site.url }}perspective/">A semi-analytical perspective ...</a></br>
   
  <b><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></br>
 
+  
+### Furter Information
 <b>
 <a href="{{ site.url }}my_cv/">My CV</a>
 <br>
