--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="home">
 
-  <b>Welcome to my reserach blog. This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.<\br>
+  <b>Welcome to my reserach blog. This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.</br>
   
   See some recent posts:<\br>
 
@@ -35,10 +35,12 @@ layout: default
     </div>
     
 <div>  
-	<h1 class="page-heading">Further Information</h1>
+	<h1 class="page-heading">Further Information</h1></br>
+	
+	<hr>
 
-	<a href="{{ site.url }}past_research/">Past Reserach Projects</a>
-	<a href="{{ site.url }}outreach/">Outreach and Misc</a>
+	<br><a href="{{ site.url }}past_research/">Past Reserach Projects</a>
+	<br><a href="{{ site.url }}outreach/">Outreach and Misc</a>
 
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
