--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@ layout: default
     </font></br>
     
     
-<h1 class="page-heading">Further Information</h1></br><hr>
+<h1 class="page-heading">Further Information</h1><hr>
 
-	<br><a href="{{ site.url }}past_research/">Past Reserach Projects</a>
-	<br><a href="{{ site.url }}outreach/">Outreach and Misc</a>
+	<a href="{{ site.url }}my_cv/">My CV</a></br>
+	<a href="{{ site.url }}past_research/">Past Reserach Projects</a></br>
+	<a href="{{ site.url }}outreach/">Outreach and Misc</a></br>
 
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
