--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ layout: default
     
 <h2 class="page-heading">Further Information</h2><hr>
 	<ul type="circle">
-		<a href="{{ site.url }}my_cv/">My CV</a></br>
-		<a href="{{ site.url }}past_research/">Past Reserach Projects</a></br>
-		<a href="{{ site.url }}outreach/">Outreach and Misc</a></br>
+		<li><a href="{{ site.url }}my_cv/">My CV</a></li></br>
+		<li><a href="{{ site.url }}past_research/">Past Reserach Projects</a></li></br>
+		<li><a href="{{ site.url }}outreach/">Outreach and Misc</a></li></br>
 	</ul>
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
