--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@ layout: default
 
 <div class="home">
 	
-<h2 class="page-heading">Welcome to my research blog</h2>
+<h3 class="title">Welcome to my research blog</h3>
 	
-	<font size="+1">
-		<p style="text-align:justify">
-  			<b>This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.</b>
-		</p>
-	</font>
+<div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>	
+	
+	
+<font size="+1">
+	<p style="text-align:justify; font-family: "Cabin Sketch";>
+		<b>This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.</b>
+	</p>
+</font>
 
 <b>See some recent posts:</b></br>
 
@@ -26,7 +29,7 @@ layout: default
   </ul>
  <a href="{{ site.url }}all_posts/">See all posts</a></br>
 
-<h2 class="page-heading">Projects</h2><hr>
+<h3 class="page-heading">Projects</h3><hr>
   
  <font size="+1">   
 	<ul type="disc">    
