--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 <h3 class="page-heading">Projects</h3>
   
  <font size="+1">   
-	<ul type="\f137">    
+	<ul type="">    
     		<li><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></li>
 		<li><a href="{{ site.url }}perspective/">A semi-analytical perspective on ...</a></li>
     		<li><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></li>
