--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ layout: default
 	</ul>
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
-<blockquote>We are nothing but star dust, trying to find its way back to the stars&mdash;David Jones, <i>Love and Space Dust</i>											     
+<blockquote>
+	We are nothing but star dust, trying to find its way back to the stars.&mdash;David Jones, <i>Love and Space Dust</i>											     
 </blockquote>											     
 											     
 											     
