--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ layout: default
 							   
     
 <h3 class="page-heading">Further Information</h3>
-	<ul type="\f005">
+	<ul>
 		<li><a href="{{ site.url }}my_cv/"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> My CV</a></li>
 		<li><a href="{{ site.url }}past_research/"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Past Reserach Projects</a></li>
 		<li><a href="{{ site.url }}outreach/"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Outreach and Misc</a></li>
 	</ul>
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
-<blockquote>
+<blockquote style="align-text:right">
 	<b>We are nothing but star dust, trying to find its way back to the stars.</b><br>
 		&mdash; David Jones, <small>Love and Space Dust</small>											     
 </blockquote>											     
