--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ layout: default
     
 <h3 class="page-heading">Further Information</h3>
 	<ul>
-		<li><a href="{{ site.url }}my_cv/"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> My CV</a></li>
-		<li><a href="{{ site.url }}past_research/"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Past Reserach Projects</a></li>
-		<li><a href="{{ site.url }}outreach/"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Outreach and Misc</a></li>
+		<li><a href="{{ site.url }}my_cv/"> My CV</a></li>
+		<li><a href="{{ site.url }}past_research/"> Past Reserach Projects</a></li>
+		<li><a href="{{ site.url }}outreach/"></i> Outreach and Misc</a></li>
 	</ul>
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
