--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@ layout: default
 	
 <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>	
 	
+
+<blockquote>
+	<b>About: </b>This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.										     
+</blockquote>
 	
 <font size="+1">
 	<p style="text-align:justify; font-family: "Cabin Sketch";>
@@ -46,7 +50,7 @@ layout: default
 	</ul>
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
-<blockquote style="align-text:right">
+<blockquote>
 	<b>We are nothing but star dust, trying to find its way back to the stars.</b><br>
 		&mdash; David Jones, <small>Love and Space Dust</small>											     
 </blockquote>											     
