--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@ layout: default
 	
 
 <blockquote>
-	<b>About: </b>This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.										     
+	<tt><b>About: </b>This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.</tt>										     
 </blockquote>
 	
-<font size="+1">
-	<p style="text-align:justify; font-family: "Cabin Sketch";>
-		<b>This space is dedicated to my current and past reserach on galaxy formation and evolution modelling.</b>
-	</p>
-</font>
 
 <b>Learn more about my work and see some recent posts:</b></br>
 
@@ -31,7 +26,7 @@ layout: default
     {% endfor %}
     
   </ul>
-<div><tt><a href="{{ site.url }}all_posts/">See all posts</a><tt></div></br>
+<div><tt><a href="{{ site.url }}all_posts/">See all posts</a></tt></div></br>
 				   
 <h3 class="page-heading">Projects</h3>
   
@@ -51,8 +46,8 @@ layout: default
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
 <blockquote>
-	<b>We are nothing but star dust, trying to find its way back to the stars.</b><br>
-		&mdash; David Jones, <small>Love and Space Dust</small>											     
+	<tt><b>We are nothing but star dust, trying to find its way back to the stars.</b><br>
+		&mdash; David Jones, <small>Love and Space Dust</small></tt>										     
 </blockquote>											     
 		
 <div align="center" style="margin-bottom: 15px;">&mdash;&nbsp;<i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'>&nbsp;</i><i class='fa fa-rocket'></i>&nbsp;&mdash;</div>	
