--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 
 <b>Learn more about my work and see some recent posts:</b></br>
 
-  <ul class="class="customListPost">
+  <ul class="customListPosts">
     {% for post in site.posts limit:10%}
 
     <li>
@@ -26,7 +26,7 @@ layout: default
     {% endfor %}
     
   </ul>
-<div><tt><small><a href="{{ site.url }}all_posts/">See all posts</a></small></tt></div></br>
+<div align="right"><tt><small><a href="{{ site.url }}all_posts/">See all posts</a></small></tt></div></br>
 				   
 <h3 class="page-heading">Projects</h3>
   
