--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
   
-	<ul type=" ">    
+	<ul class="customList">    
 		<li><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></li>
 		<li><a href="{{ site.url }}perspective/">A semi-analytical perspective on ...</a></li>
 		<li><a href="{{ site.url }}multidark_gals/">The MultiDark-Galaxies</a></li>
