--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
     {% endfor %}
     
   </ul>
-<div align="right"><tt><small><a href="{{ site.url }}all_posts/">See all posts</a></small></tt></div></br>
+<div align="right"><tt><a href="{{ site.url }}all_posts/">See all posts</a></tt></div></br>
 				   
 <h3 class="page-heading">Projects</h3>
   
