--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 </blockquote>
 	
 
-<b>Learn more about my work and see some recent posts:</b></br>
+	<div style="margin=15px">Learn more about my work and see some recent posts:</div>
 
   <ul class="customListPosts">
     {% for post in site.posts limit:10%}
@@ -27,6 +27,8 @@ layout: default
     
   </ul>
 <div align="right"><tt><a href="{{ site.url }}all_posts/">See all posts</a></tt></div></br>
+
+<div class="button-left"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
   
