--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
   </ul>
 <div align="right"><tt><a href="{{ site.url }}all_posts/">See all posts</a></tt></div></br>
 
-<div class="button-left"><a href="{{ site.url }}all_posts/">See all posts</a></div>
+<div class="button-right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
   
