--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 </blockquote>
 	
 
-	<div style="margin=15px">Learn more about my work and see some recent posts:</div>
+	<div style="margin: 15px">Learn more about my work and see some recent posts:</div>
 
   <ul class="customListPosts">
     {% for post in site.posts limit:10%}
@@ -28,7 +28,7 @@ layout: default
   </ul>
 <div align="right"><tt><a href="{{ site.url }}all_posts/">See all posts</a></tt></div></br>
 
-<div class="button-right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
+<div class="tiny_box"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
   
