--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@ layout: default
     
   </ul>
 
-<div class="tiny_box"><a href="{{ site.url }}all_posts/">See all posts</a></div>
+<div class="button_gray"><a href="{{ site.url }}all_posts/">See all posts</a></div>
+	
+
+<div class="button_white"><a href="{{ site.url }}all_posts/">See all posts</a></div>	
 				   
 <h3 class="page-heading">Projects</h3>
   
