--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
   
+	<div class="button_white" style="width:30%"><a href="{{ site.url }}perspective/"><i class='fa fa-rocket'><br>Modelling early-stage galaxy formation</a></div>
+		
+		
 	<ul class="customList">    
 		<li><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a></li>
 		<li><a href="{{ site.url }}perspective/">A semi-analytical perspective on ...</a></li>
