--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 <h3 class="page-heading">Projects</h3>
   
 	<div class="button_white" style="width:30%">
-		<a href="{{ site.url }}perspective/"><i class='fa fa-rocket fa-xxl'><br>Modelling early-stage galaxy formation</a></div>
+		<a href="{{ site.url }}perspective/"><i class='fa fa-rocket fa-4x'><br>Modelling early-stage galaxy formation</a></div>
 		
 		
 	<ul class="customList">    
