--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
   
-	<div class="button_white" style="width:30%">
+	<div class="button_white" style="width:28%">
 		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
 	</div>
 	
-	<div class="button_white" style="width:30%">
+	<div class="button_white" style="width:28%">
 		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a>
 	</div>
 	
-	<div class="button_white" style="width:30%">
+	<div class="button_white" style="width:28%; height:2em">
 		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
 	</div>
 							   
