--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
   
-	<div class="button_white" style="width:25%; height:6em; float:left">
+	<div class="button_white" style="width:28%; height:6em; float:left">
 		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
 	</div>
 	
-	<div class="button_white" style="width:25%; height:6em float:center">
+	<div class="button_white" style="width:28%; height:6em; float:center">
 		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a>
 	</div>
 	
-	<div class="button_white" style="width:25%; height:6em float:right">
+	<div class="button_white" style="width:28%; height:6em; float:right">
 		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
 	</div>
 							   
@@ -47,7 +47,7 @@ layout: default
 <h3 class="page-heading">Further Information</h3>
 	
 	<div class="button_white" style="width:30%">
-		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br> My CV</a>
+		<i class='fas fa-user-astronaut fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br> My CV</a>
 	</div>
 	
 	<div class="button_white" style="width:30%">
@@ -55,7 +55,7 @@ layout: default
 	</div>
 	
 	<div class="button_white" style="width:30%">
-		<i class='fas fa-user-astronaut fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach and Misc</a>
+		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach and Misc</a>
 	</div>	
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
