--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
   
-	<div class="button_white" style="width:28%; height:7em; float:left">
+	<div class="button_white" style="width:27%; height:7em; float:left">
 		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
 	</div>
 	
-	<div class="button_white" style="width:28%; height:7em; float:center">
-		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a>
+	<div class="button_white" style="width:27%; height:7em; float:center">
+		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a>
 	</div>
 	
-	<div class="button_white" style="width:28%; height:7em; float:right">
+	<div class="button_white" style="width:27%; height:7em; float:right">
 		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br><br>The MultiDark-Galaxies</a>
 	</div>
 							   
@@ -51,7 +51,7 @@ layout: default
 	</div>
 	
 	<div class="button_white" style="width:28%; height:6.5em; float:center">
-		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
+		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
 	</div>
 	
 	<div class="button_white" style="width:28%; height:6.5em; float:right">
