--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@ layout: default
 	</div>
 	
 	<div class="button_white" style="width:27%; height:7em; float:right">
-		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br><br>The MultiDark-Galaxies</a>
+		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
 	</div>
 							   
     
 <h3 class="page-heading">Further Information</h3>
 	
-	<div class="button_white" style="width:28%; height:6.5em; float:left">
+	<div class="button_white" style="width:27%; height:7em; float:left">
 		<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br><br>My CV</a>
 	</div>
 	
-	<div class="button_white" style="width:28%; height:6.5em; float:center">
+	<div class="button_white" style="width:27%; height:7em; float:center">
 		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
 	</div>
 	
-	<div class="button_white" style="width:28%; height:6.5em; float:right">
+	<div class="button_white" style="width:27%; height:7em; float:right">
 		<i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach and Misc</a>
 	</div>	
 
