--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 <h3 class="page-heading">Projects</h3>
   
 	<div class="button_white" style="width:27%; height:7em; float:left">
-		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
+		<i class='fa fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
 	</div>
 	
 	<div class="button_white" style="width:27%; height:7em; float:center">
@@ -40,7 +40,7 @@ layout: default
 	</div>
 	
 	<div class="button_white" style="width:27%; height:7em; float:right">
-		<i class='fa fa-rocket fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
+		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
 	</div>
 							   
     
@@ -51,11 +51,11 @@ layout: default
 	</div>
 	
 	<div class="button_white" style="width:27%; height:7em; float:center">
-		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
+		<i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
 	</div>
 	
 	<div class="button_white" style="width:27%; height:7em; float:right">
-		<i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach and Misc</a>
+		<i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach and Misc</a>
 	</div>	
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
