--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
 		<i class='fa fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
 	</div>
 	
-	<div class="button_white" style="width:27%; height:7em; float:center">
+	<div class="button_white" style="width:27%; height:7em; float:middle">
 		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a>
 	</div>
 	
@@ -50,7 +50,7 @@ layout: default
 		<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br><br>My CV</a>
 	</div>
 	
-	<div class="button_white" style="width:27%; height:7em; float:center">
+	<div class="button_white" style="width:27%; height:7em; float:">
 		<i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
 	</div>
 	
