--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ layout: default
 		<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br><br>My CV</a>
 	</div>	
 	<div class="button_white" style="width:28%; height:7em; float:">
-		<i class='fas fa-rocket fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
+		<i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
 	</div>	
 	<div class="button_white" style="width:28%; height:7em; float:right">
 		<i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach and Misc</a>
