--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 <h3 class="page-heading">Projects</h3>
   
 	<div class="button_white" style="width:27%; height:7em; float:left">
-		<i class='fa fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
+		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
 	</div>
 	
 	<div class="button_white" style="width:15%; height:7em; float:middle">
