--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@ layout: default
 <h3 class="page-heading">Projects</h3>
   
 	<div class="button_white" style="width:30%; height:7em; float:left">
-		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal">Modelling early-stage galaxy formation</a></div>	
+		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a></div>	
 	<div class="button_white" style="width:30%; height:7em; float:middle">
-		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal">A semi-analytical perspective on ...</a></div>	
+		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a></div>	
 	<div class="button_white" style="width:30%; height:7em; float:right">
-		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal">The MultiDark-Galaxies</a></div>  
+		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a></div>  
     
 <h3 class="page-heading">Further Information</h3>
 	
 	<div class="button_white" style="width:28%; height:7em; float:left">
-		<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal">My CV</a>
+		<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>My CV</a>
 	</div>	
 	<div class="button_white" style="width:30%; height:7em; float:center">
-		<i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal">Past Reserach Projects</a>
+		<i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a>
 	</div>	
 	<div class="button_white" style="width:30%; height:7em; float:right">
-		<i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal">Outreach & Misc</a>
+		<i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a>
 	</div>	
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
