--- a/index.html
+++ b/index.html
@@ -48,7 +48,20 @@ layout: default
 	</div>	
 	<div class="button_white" style="width:30%; height:7em; float:right">
 		<i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a>
+	</div>
+	
+	<div>
+		<p class="button_white" style="width:28%; height:7em; float:left">
+			<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>My CV</a>
+		</p>
+		<p class="button_white" style="width:28%; height:7em; float:left">
+			<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>My CV</a>
+		</p>
+		<p class="button_white" style="width:28%; height:7em; float:left">
+			<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>My CV</a>
+		</p>
 	</div>	
+	
 
  <!--  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p> -->
 
