--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ layout: default
 		<p class="button_white" style="width:28%; height:7em; float:left">
 			<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>My CV</a>
 		</p>
-		<p class="button_white" style="width:28%; height:7em; float:left">
+		<p class="button_white" style="width:28%; height:7em; float:center">
 			<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>My CV</a>
 		</p>
-		<p class="button_white" style="width:28%; height:7em; float:left">
+		<p class="button_white" style="width:28%; height:7em; float:right">
 			<i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>My CV</a>
 		</p>
 	</div>	
