--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>
   
-	<div class="button_white" style="width:30%; height:7em; float:left">
-		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a></div>	
-	<div class="button_white" style="width:30%; height:7em; float:middle">
-		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a></div>	
-	<div class="button_white" style="width:30%; height:7em; float:right">
-		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a></div>  
+	<div>
+	     <p class="button_white" style="width:30%; height:7em; float:left">
+			<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
+		</p>	
+		<p class="button_white" style="width:30%; height:7em; float:middle">
+			<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a>
+		</p>	
+		<p class="button_white" style="width:30%; height:7em; float:right">
+			<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
+		</p>
+	
+	</div>  
     
 <h3 class="page-heading">Further Information</h3>
 	<div>
