--- a/index.html
+++ b/index.html
@@ -29,20 +29,17 @@ layout: default
 
 <div class="button_white" style="float:right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
-<h3 class="page-heading">Projects</h3>
-  
+<h3 class="page-heading">Projects</h3>  
 	
-	     <p class="button_white" style="width:30%; height:7em; float:left">
-			<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
-		</p>	
-		<p class="button_white" style="width:30%; height:7em; float:middle">
-			<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective on ...</a>
-		</p>	
-		<p class="button_white" style="width:30%; height:7em; float:right">
-			<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
-		</p>
-	
-	
+     	<p class="button_white" style="width:30%; height:7em; float:left">
+		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
+	</p>	
+	<p class="button_white" style="width:30%; height:7em; float:middle">
+		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective</a>
+	</p>	
+	<p class="button_white" style="width:30%; height:7em;">
+		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
+	</p>	
     
 <h3 class="page-heading">Further Information</h3>
 	<div>
