--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>  
 	
-     	<p class="button_white" style="width:30%; height:7em; float:left">
+     	<p class="button_white" style="width:30%; height:7em;">
 		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
 	</p>	
-	<p class="button_white" style="width:30%; height:7em; float:middle">
+	<p class="button_white" style="width:30%; height:7em;>
 		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective</a>
 	</p>	
 	<p class="button_white" style="width:30%; height:7em;">
