--- a/index.html
+++ b/index.html
@@ -32,14 +32,11 @@ layout: default
 <h3 class="page-heading">Projects</h3>  
 	
      	<p class="button_white" style="width:30%; height:7em;">
-		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a>
-	</p>	
-	<p class="button_white" style="width:30%; height:7em;>
-		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective</a>
-	</p>	
+		<i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a></p>	
 	<p class="button_white" style="width:30%; height:7em;">
-		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a>
-	</p>	
+		<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective</a></p>	
+	<p class="button_white" style="width:30%; height:7em;">
+		<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a></p>	
     
 <h3 class="page-heading">Further Information</h3>
 	<div>
