--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ layout: default
 				   
 <h3 class="page-heading">Projects</h3>  
 	
-     	<p class="button_white" style="width:30%; height:7em;"><i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>Modelling early-stage galaxy formation</a></p>	
-	<p class="button_white" style="width:30%; height:7em;"><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>A semi-analytical perspective</a></p>	
-	<p class="button_white" style="width:30%; height:7em;"><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/" "font-size:normal"><br>The MultiDark-Galaxies</a></p>	
+     	<p class="button_white" style="width:30%; height:7em;"><i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/"><br>Modelling early-stage galaxy formation</a></p>	
+	<p class="button_white" style="width:30%; height:7em;"><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><br>A semi-analytical perspective</a></p>	
+	<p class="button_white" style="width:30%; height:7em;"><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/"><br>The MultiDark-Galaxies</a></p>	
     
 <h3 class="page-heading">Further Information</h3>
 	<div>
-	<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>My CV</a></p>
+	<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
 	<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
 	<p class="button_white" style="width:28%; height:7em"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
 	</div>	
