--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ layout: default
 <div class="button_white" style="float:right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>  
-	
+	<div style"height: 10em">
      	<p class="button_white" style="width:30%;"><i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/"><br>Modelling early-stage galaxy formation</a></p>	
 	<p class="button_white" style="width:30%;"><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><br>A semi-analytical perspective</a></p>	
 	<p class="button_white" style="width:30%;"><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/"><br>The MultiDark-Galaxies</a></p>	
-    
+	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div>
 	<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
