--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
 	<div class="button_white" style="width:30%; float:center">
 		<p><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><br>A semi-analytical perspective</a></p>	
 	</div>
-	<div class="button_white" style="width:30%; float:left">
+	<div class="button_white" style="width:30%; float:right">
 		<p><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/"><br>The MultiDark-Galaxies</a></p>	
 	</div>
 <h3 class="page-heading">Further Information</h3>
