--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ layout: default
 
 <div class="button_white" style="float:right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
-<h3 class="page-heading">Projects</h3>  
+<h3 class="page-heading">Projects</h3>
+	<div style="height:20%">
 	<div class="button_white" style="width:30%; float:left">
      		<p><i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/"><br>Modelling early-stage galaxy formation</a></p>	
 	</div>
@@ -39,6 +40,7 @@ layout: default
 	<div class="button_white" style="width:30%; float:right">
 		<p><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/"><br>The MultiDark-Galaxies</a></p>	
 	</div>
+	<div>
 <h3 class="page-heading">Further Information</h3>
 	<div>
 		<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
