--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 <div class="button_white" style="float:right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="height:20%;">
+	<div style="height:20%">
 	<div class="button_white" style="width:30%; float:left">
      		<p><i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/"><br>Modelling early-stage galaxy formation</a></p>	
 	</div>
