--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
 	</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
-	<div>
+	<div style="height:20%">
 		<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
 		<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
 		<p class="button_white" style="width:28%; height:7em"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
