--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@ layout: default
 <div class="button_white" style="float:right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="height:20%;">
-	<div class="button_white" style="width:25%; float:left;">
-     		<p><i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/"><br>Modelling early-stage galaxy formation</a></p>	
-	</div>
-	<div class="button_white" style="width:25%; float:center;">
-		<p><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><br>A semi-analytical perspective</a></p>	
-	</div>
-	<div class="button_white" style="width:25%; float:right;">
-		<p><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/"><br>The MultiDark-Galaxies</a></p>	
-	</div>
+	<div style="width:95%; height:20%; align:center;">
+		<div class="button_white" style="width:25%; float:left;">
+			<p><i class='fas fa-atom fa-4x'></i><a href="{{ site.url }}perspective/"><br>Modelling early-stage galaxy formation</a></p>	
+		</div>
+		<div class="button_white" style="width:25%; float:center;">
+			<p><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><br>A semi-analytical perspective</a></p>	
+		</div>
+		<div class="button_white" style="width:25%; float:right;">
+			<p><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/"><br>The MultiDark-Galaxies</a></p>	
+		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div style="height:20%">
