--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 	<div style="width:95%; height:20%; align:center;">
 		<div class="button_white" style="width:25%; float:left;">
 			<p><i class='fas fa-atom fa-4x'></i></p>
-			<p><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a></p>	
+			<a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a>	
 		</div>
 		<div class="button_white" style="width:25%; float:center;">
 			<p><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><br>A semi-analytical perspective</a></p>	
