--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 <h3 class="page-heading">Projects</h3>
 	<div style="width:95%; height:20%; align:center;">
 		<div class="button_white" style="width:25%; float:left;">
-			<p><i class='fas fa-atom fa-4x'></i></p>
+			<p><i class='fas fa-atom fa-4x'></i>
 			<a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a>	
 		</div>
 		<div class="button_white" style="width:25%; float:center;">
