--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ layout: default
 	<div style="width:95%; height:20%; align:center;">
 		<div class="button_white" style="width:25%; float:left;">
 			<p><i class='fas fa-atom fa-4x'></i>
-			<a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a>	
+			<p><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a></p>	
 		</div>
 		<div class="button_white" style="width:25%; float:center;">
-			<p><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><br>A semi-analytical perspective</a></p>	
+			<p><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><A semi-analytical perspective</a></p>	
 		</div>
 		<div class="button_white" style="width:25%; float:right;">
 			<p><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/"><br>The MultiDark-Galaxies</a></p>	
