--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ layout: default
 			<p><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a></p>	
 		</div>
 		<div class="button_white" style="width:25%; float:center;">
-			<p><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><A semi-analytical perspective</a></p>	
+			<p><i class='fas fa-binoculars fa-4x'></i></p>
+			<p><a href="{{ site.url }}perspective/"><A semi-analytical perspective</a></p>	
 		</div>
 		<div class="button_white" style="width:25%; float:right;">
 			<p><i class='fa fa-star fa-4x'></i></p>
