--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
 			<p><i class='fas fa-binoculars fa-4x'></i></p>
 			<p><a href="{{ site.url }}perspective/"><A semi-analytical perspective</a></p>	
 		</div>
-		<div class="button_white" style="width:25%; float:right;">
+		<div class="button_white" style="width:25%; float:center;">
 			<p><i class='fa fa-star fa-4x'></i></p>
 			<p><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></p>	
 		</div>
