--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@ layout: default
 <div class="button_white" style="float:right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="width:95%; height:20%; align:center;">
-		<div class="button_white" style="width:25%; float:left;">
+	<div style="width:95%; height:20%; align:center">
+		<div class="button_white" style="width:25%; float:left">
 			<p><i class='fas fa-atom fa-4x'></i></p>
 			<p><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a></p>	
 		</div>
-		<div class="button_white" style="width:25%; float:center;">
+		<div class="button_white" style="width:25%; float:center">
 			<p><i class='fas fa-binoculars fa-4x'></i></p>
 			<p><a href="{{ site.url }}perspective/"><A semi-analytical perspective</a></p>	
 		</div>
-		<div class="button_white" style="width:25%; float:center;">
+		<div class="button_white" style="width:25%; float:center">
 			<p><i class='fa fa-star fa-4x'></i></p>
 			<p><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></p>	
 		</div>
