--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@ layout: default
 <h3 class="page-heading">Projects</h3>
 	<div style="width:100%; height:7em; align:center">
 		<div class="button_white" style="width:25%; float:left">
-			<p><i class='fas fa-atom fa-4x'></i></p>
-			<p><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a></p>	
+			<p><i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a></p>	
 		</div>
 		<div class="button_white" style="width:25%; float:center">
 			<p><i class='fas fa-binoculars fa-4x'></i></p>
