--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@ layout: default
 			<p><i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a></p>	
 		</div>
 		<div class="button_white" style="width:25%; float:center">
-			<p><i class='fas fa-binoculars fa-4x'></i></p>
-			<a href="{{ site.url }}perspective/"><A semi-analytical perspective</a>	
+			<p><i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><A semi-analytical perspective</a></p>
 		</div>
 		<div class="button_white" style="width:25%; float:right">
-			<p><i class='fa fa-star fa-4x'></i></p>
-			<p><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></p>	
+			<p><i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></p>	
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
