--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 </blockquote>
 	
 
-	<div style="margin_bottom: 25px"><b>Learn more about my work and see some recent posts:</b></div>
+	<div style="margin_bottom: 25px;"><b>Learn more about my work and see some recent posts:</b></div>
 
   <ul class="customListPosts">
     {% for post in site.posts limit:10%}
@@ -27,22 +27,22 @@ layout: default
     
   </ul>
 
-<div class="button_white" style="float:right"><a href="{{ site.url }}all_posts/">See all posts</a></div>
+<div class="button_white" style="float:right;"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="width:100%; height:7em; align:center">
-		<div class="button_white" style="width:25%; float:left">
+	<div style="width:100%; height:7em; align:center;">
+		<div class="button_white" style="width:25%; float:left;">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a>	
 		</div>
-		<div class="button_white" style="width:25%; float:center">
+		<div class="button_white" style="width:25%; float:center;">
 			<i class='fas fa-binoculars fa-4x'></i><a href="{{ site.url }}perspective/"><A semi-analytical perspective</a>
 		</div>
-		<div class="button_white" style="width:25%; float:right">
+		<div class="button_white" style="width:25%; float:right;">
 			<i class='fa fa-star fa-4x'></i><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
-	<div style="height:20%">
+	<div style="height:20%;">
 		<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
 		<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
 		<p class="button_white" style="width:28%; height:7em"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
