--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ layout: default
 <h3 class="page-heading">Projects</h3>
 	<div style="width:100%; height:7em; align:center;">
 		<div class="button_white" style="width:25%; float:left;">
-			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/"><Modelling early-stage galaxy formation</a>	
+			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
 		<div class="button_white" style="width:25%; float:center;">
-			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/"><A semi-analytical perspective</a>
+			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
 		<div class="button_white" style="width:25%; float:right;">
 			<i class='fa fa-star fa-4x'></i><br><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a>
