--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ layout: default
 <div class="button_white" style="float:right;"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="width:100%; height:8em; align:center;">
-		<div class="button_white" style="width:25%; float:left;">
+	<div style="width:100%; align:center;">
+		<div class="button_white" style="width:28%; float:left;">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
-		<div class="button_white" style="width:25%; float:center;">
+		<div class="button_white" style="width:28%; float:center;">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
-		<div class="button_white" style="width:25%; float:right;">
+		<div class="button_white" style="width:28%; float:right;">
 			<i class='fa fa-star fa-4x'></i><br><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a>
 		</div>
 	</div>
