--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 </blockquote>
 	
 
-	<div style="margin_bottom: 25px;"><b>Learn more about my work and see some recent posts:</b></div>
+	<div style="margin_bottom: 25px; height:0.1em"><b>Learn more about my work and see some recent posts:</b></div>
 
   <ul class="customListPosts">
     {% for post in site.posts limit:10%}
