--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 </blockquote>
 	
 
-	<div style="margin_bottom: 25px; height:0.1em"><b>Learn more about my work and see some recent posts:</b></div>
+	<div style="margin_bottom: 25px;"><b>Learn more about my work and see some recent posts:</b></div>
 
   <ul class="customListPosts">
     {% for post in site.posts limit:10%}
@@ -27,7 +27,7 @@ layout: default
     
   </ul>
 
-<div class="button_white" style="float:right;"><a href="{{ site.url }}all_posts/">See all posts</a></div>
+<div class="button_white" style="float:right; height:0.2em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
 	<div style="width:80%; float:center;">
