--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 <div class="button_white" style="float:right; height:2em"><a href="{{ site.url }}all_posts/">See all posts</a></div>
 				   
 <h3 class="page-heading">Projects</h3>
-	<div style="width:85%; align:center;">
+	<div style="width:85%; float:center;">
 		<div class="button_white" style="width:30%; float:left;">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
@@ -43,9 +43,9 @@ layout: default
 	</div>
 <h3 class="page-heading">Further Information</h3>
 	<div style="height:20%;">
-		<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
-		<p class="button_white" style="width:28%; height:7em;"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
-		<p class="button_white" style="width:28%; height:7em"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
+		<p class="button_white" style="width:28%; height:6em;"><i class='fas fa-robot fa-4x'></i><a href="{{ site.url }}my_cv/" "font-size:normal"><br>About me</a></p>
+		<p class="button_white" style="width:28%; height:6em;"><i class='fas fa-meteor fa-4x'></i><a href="{{ site.url }}past_research/" "font-size:normal"><br>Past Reserach Projects</a></p>
+		<p class="button_white" style="width:28%; height:6em"><i class='fas fa-hand-spock fa-4x'></i><a href="{{ site.url }}outreach/" "font-size:normal"><br>Outreach & Misc</a></p>
 	</div>	
 	
 
