--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 		<div class="button_white" style="width:150px; float:left;">
 			<i class='fas fa-atom fa-4x'></i><br><a href="{{ site.url }}perspective/">Modelling early-stage galaxy formation</a>	
 		</div>
-		<div class="button_white" style="width:150px; float:center;">
+		<div class="button_white" style="width:150px;">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
 		<div class="button_white" style="width:150px; float:right;">
