--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
 		<div class="button_white" style="width:28%; float:right">
-			<i class='fa fa-star fa-4x'></i><br><span class="vetically-centered"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></span>
+			<i class='fa fa-star fa-4x'></i><br><span class="vetically-centered; vertical-align:middle"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></span>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
