--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
 		<div class="button_white" style="width:28%; display: inline-block">
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
-		<div class="button_white" style="width:28%; float:right">
+		<div id="container" class="button_white" style="width:28%; float:right">
 			<i class='fa fa-star fa-4x'></i><br><span class="vetically-centered; vertical-align:middle"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></span>
 		</div>
 	</div>
