--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ layout: default
 			<i class='fas fa-binoculars fa-4x'></i><br><a href="{{ site.url }}perspective/">A semi-analytical perspective</a>
 		</div>
 		<div class="button_white" style="width:28%; float:right">
-			<div><i class='fa fa-star fa-4x'></i></div>
-			<div id="container"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></div>
+			<div id="container2"><i class='fa fa-star fa-4x'></i></div>
+			<div id="container1"><a href="{{ site.url }}perspective/">The MultiDark-Galaxies</a></div>
 		</div>
 	</div>
 <h3 class="page-heading">Further Information</h3>
